add new features and update UI on usb detected

--- a/templates/index.html
+++ b/templates/index.html
@@ -39,6 +39,7 @@
                   {% endif %}
                 </div>
                 <div class="col-4 text-end">
+                  <a class="btn btn-outline-info me-2" href="/sslpindec" role="button"><i class="bi bi-shield-lock"></i> SSL Detector</a>
                   <a class="btn btn-outline-primary" href="/features" role="button">Other Features</a>
                 </div>
               </div>
