add new features adb gui and fix navbar

--- a/templates/no-usb.html
+++ b/templates/no-usb.html
@@ -78,12 +78,12 @@
                 <p class="card-description">Configure and manage Proxy settings</p>
                 </div>
                 
-                <div class="dashboard-card" onclick="window.location.href='#adb-setting'">
+                <div class="dashboard-card" onclick="window.location.href='/adb-gui'">
                 <div class="card-icon">
                     <i class="bi bi-gear"></i>
                 </div>
-                <h3 class="card-title">ADB Setting</h3>
-                <p class="card-description">Configure and manage ADB settings</p>
+                <h3 class="card-title">ADB GUI</h3>
+                <p class="card-description">Configure and manage ADB GUI</p>
                 </div>
                 
                 <div class="dashboard-card" onclick="window.location.href='#terminal'">
